Opened 8 years ago
Closed 8 years ago
#13118 closed bug (fixed)
[Patch] kits/tracker/DirMenu.cpp: fix memory leak
Reported by: | mt | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | Kits/libtracker.so | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
In BDirMenu::Populate(), memory allocated to 'menu' at line 98 [1] may leak if fMenuBar is NULL at line 100 [2].
[1] http://cgit.haiku-os.org/haiku/tree/src/kits/tracker/DirMenu.cpp#n98 [2] http://cgit.haiku-os.org/haiku/tree/src/kits/tracker/DirMenu.cpp#n100
Attachments (2)
Change History (4)
by , 8 years ago
Attachment: | 0041-DirMenu.cpp-fix-memory-leak.patch added |
---|
comment:1 by , 8 years ago
patch: | 0 → 1 |
---|
by , 8 years ago
Attachment: | report-97294d.html added |
---|
Note:
See TracTickets
for help on using tickets.
report by Clang Static Analyzer